# lambda-script

./: .gitignore  Cargo.toml  README.md  example.ls  fib.ls  guess.ls  lib.ls  memo.ls  test.ls  test.txt
.metals/: metals.lock.db  metals.mv.db
example/: all_strings.ls  guess.ls  inf_lists.ls  inf_trees.ls  lib.ls  lin_regression.ls  lists.ls  memo.ls  numbers.ls  primes.ls  sort.ls  test.ls
lambda-script-syntax-highlighter/: README.md  lambda-script-syntax-highlighter-0.0.1.vsix  lambda-script-syntax-highlighter-0.0.2.vsix  lambda-script-syntax-highlighter-0.0.3.vsix  lambda-script-syntax-highlighter-0.0.4.vsix  language-configuration.json  package-lock.json  package.json
lambda-script-syntax-highlighter/syntaxes/: lambdascript.tmLanguage.json
src/: lexer.rs  main.rs  tests.rs
src/evaluator/: errors.rs  mod.rs  operations.rs  tests.rs
src/lexer/: enums.rs  lexer.rs  mod.rs  tests.rs
src/parser/: enums.rs  errors.rs  mod.rs  tests.rs
starter-packs/lambda-script-starter-pack-linux/: example.ls  lambda-script-syntax-highlighter-0.0.5.vsix  lambda-script-syntax-highlighter-0.0.6.vsix
